[package]
name = "derive_display"
authors = ["orgrinrt", "Hiisi Digital"]
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.52", features = ["full", "extra-traits"] }
quote = "1.0.9"
paste = "1.0.14"
proc-macro2 = { version = "1.0.78", features = [] }
lazy_static = "1.4.0"
regex = "1.10.3"
log = "0.4.21"
proc-macro-error = "1.0.4"
to_snake_case = "0.1.1"
proc-macro-crate = "3.1.0"
