[package]
name = "derive_display"
authors = ["orgrinrt", "Hiisi Digital"]
version = "0.0.2"
edition = "2021"
description = """
A convenient attribute to derive `Display` implementation from another implementation. Currently supports `ToTokens`.
"""
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
keywords = ["derive", "trait", "impl", "display", "helper"]
categories = ["rust-patterns", "value-formatting", "development-tools", "development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/derive_display"
homepage = "https://github.com/orgrinrt/derive_display"
repository = "https://github.com/orgrinrt/derive_display"

[lib]
proc-macro = true

[dev-dependencies]

[dependencies]
# TODO: comb over what we actually use and minimize the features on deps
include_proc_macro = "1.0.6"
syn = { version = "2.0.52", features = ["full", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = { version = "1.0.78", features = [] }
proc-macro-crate = "3.1.0"
